# nse-analysis-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  create_tables.py  pyproject.toml  run_pipeline.py
app/: __init__.py  config.py
app/analytics/: band_optimizer.py  otm_distance.py  pnl_calculator.py  recommendation_pipeline.py  regime_classifier.py  risk_metrics.py
app/core/: __init__.py  database.py  logging.py
app/ingestion/: base.py  expiry_calendar.py  futures_collector.py  nse_scraper.py  option_collector.py  spot_collector.py  validator.py  vix_collector.py
app/models/: __init__.py  alert.py  chat_history.py  daily_recommendation.py  expiry.py  fno_universe.py  futures_chain.py  india_vix.py  optimal_band.py  option_chain.py  spot_price.py  strategy_result.py  user.py
app/scheduler/: jobs.py
tests/: test_core.py
