[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nse-analysis-pipeline"
version = "1.0.0"
description = "NSE Options Data Pipeline — Data ingestion, analytics, and scheduled jobs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",

    # Settings & validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # HTTP client (NSE scraping)
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",

    # Data processing
    "polars>=1.17.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",

    # Utilities
    "structlog>=25.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "pytz>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
